# Pyrolist

./: .gitignore  CONTEXTO_AGENTE.md  PROMPT_PYROLIST_DESIGN.md  PROMPT_PYROLIST_PYSIDE6.md  README.md  RELEASE_NOTES.md  alembic.ini  all_diff.patch  bench_extract.py  fix_connections.py  patch_artist.py  patch_main_window.py  pyproject.toml  pyrolist.spec  requirements.txt  test_auth2.py  test_auth_type.py  test_font.py  test_font3.py  test_font4.py  test_full_app.sh  test_geometry.py  test_gui.py  test_headers.py  test_icon.py  test_icon2.py  test_qss_font.py  test_thread_qss.py  test_webengine.py  test_xdotool.sh
.github/workflows/: build.yml
packaging/: pyrolist.desktop
packaging/arch/: .SRCINFO  PKGBUILD
packaging/deb/DEBIAN/: control  postinst  postrm
packaging/flatpak/: org.pyrolist.Pyrolist.yml
packaging/rpm/: pyrolist.spec
packaging/windows/: installer.iss
src/pyrolist/: changelog.py  main.py
src/pyrolist/api/: discord_rpc.py  download_manager.py  invidious_client.py  lastfm.py  lyrics.py  piped_client.py  stream_extractor.py  youtube_api.py  youtube_music.py
src/pyrolist/audio/: crossfade.py  equalizer.py  player.py  queue.py  sleep_timer.py
src/pyrolist/config/: paths.py  settings.py  themes.py
src/pyrolist/db/: database.py  models.py  repository.py
src/pyrolist/locales/: en.json  es.json
src/pyrolist/native/: Makefile  __init__.py  bindings.py  build.py  fast_image.c
src/pyrolist/native_rs/: Cargo.toml  README.md  __init__.py  pyproject.toml
src/pyrolist/system/: media_keys.py  (+3 more)
tests/: conftest.py
utils/: check_workflow.py
(+92 files in other folders)
