[project]
name = "pyrolist"
version = "2.1.1"
description = "Cliente de escritorio para YouTube Music - Linux"
requires-python = ">=3.12,<3.14"
dependencies = [
    "PySide6>=6.7.0",
    "qasync>=0.27.0",
    "qt-material>=2.14",
    "ytmusicapi>=1.11.5",
    "yt-dlp>=2025.1.1",
    "python-vlc>=3.0.21",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic>=2.7",
    "tomli-w>=1.0",
    "httpx[http2]>=0.27",
    "syncedlyrics>=0.7",
    "pylast>=5.3",
    "pypresence>=4.3",
    "pystray>=0.19",
    "pillow>=10.0",
    "loguru>=0.7",
    "dbus-python>=1.3 ; sys_platform == 'linux'",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.4",
]

[project.scripts]
pyrolist = "pyrolist.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyrolist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
